fix: home looks proper on mobile

--- a/packages/components/PackCard.css
+++ b/packages/components/PackCard.css
@@ -15,19 +15,44 @@
     height: 64px;
 }    
 
+.packCard {
+    display: flex;
+    align-items: flex-start;
+
+    justify-content: left;
+    gap: 16px;
+    max-width: 100%;
+    width: 100%;
+    flex-shrink: 1;
+    box-sizing: border-box;
+    background-color: var(--backgroundAccent);
+    border-radius: var(--defaultBorderRadius);
+    padding: 16px;
+    cursor: pointer;
+}
+
+.packDescription {
+    font-size: 18px;
+    width: '100%';
+    height: '100%';
+}
+
 @container cardContainer (max-width: 320px) {
     .packImage {
         display: none;
         width: 0px;
         height: 0px;
     }
+    .packDescription {
+        font-size: 16px !important;
+    }
 }
 
 
-@container cardContainer (min-width: 512px) {
+@container cardContainer (min-width: 640px) {
     .packImage {
-        width: 128px !important;
-        height: 128px !important;
+        width: 96px !important;
+        height: 96px !important;
     }
     .packCard {
         flex-direction: row;
@@ -38,7 +63,9 @@
         width: min-content;
         justify-content: start;
     }
+    
 }
+
 
 .packCard {
     display: flex;
